# arch-eval-platform

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
arch_comp/: __init__.py  apps.py  benchmarks.py  categories.py  competition.py  guides.py  kinds.py  steps.py  summary.py
arch_comp/scripts/: README.md  harness.py  run_benchmark.sh  run_single_instance.sh
arch_comp/scripts/arch/: load_benchmark.sh  run_benchmark.sh
deploy/: Dockerfile  manage.py  settings.py  settings_test.py
tests/: test_arch.py  test_harness.py  test_instances_loader.py
