[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arch-comp"
version = "0.1.0"
description = "ARCH-COMP variant plugin for the comp-eval-platform engine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tobias Ladner" }]

dependencies = [
    "comp-eval-platform>=0.1.0",
]

[project.optional-dependencies]
dev = ["comp-eval-platform[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["arch_comp"]

# Local dev: pip install -e ../comp-eval-platform -e .
